Java 8 Compatibility (#5459)
* Java 8 Support (#5290)

* Compiling main client

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Partial integTest fixes

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Working tests under java 8

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Return to java 8 compatible state

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix test

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix test

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix mac CI

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Cleanup

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* add test case

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Remove redundant class

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Revert lombok version change

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Update readme

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Add logging to cleanup

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Add java 8 example

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Address PR feedback

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Update default connectionTImeout for Java test client from 2000ms to 10000ms (#5309)

Signed-off-by: Thomas Zhou <thomaszhou64@gmail.com>

* Resolve conflicts

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Fix

Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>

* Update examples/java8/README.md

Co-authored-by: Yi-Pin Chen <yi-pin.chen@improving.com>
Signed-off